Modelos y Endpoints actualizados.
