# src/main/java/com/revisamigrieta/backend/models/TipoEnum.java
@@ -1,0 +1,6 @@
+package com.revisamigrieta.backend.models;
+
+public enum TipoEnum {
+	INTERNA,
+	EXTERNA
+}
